web-infras/parser/tests/fixtures/babel/core/uncategorised/502/output.txt
[SyntaxError]: Octal literals are not allowed in strict mode (1,37)
1|function hello() { 'use strict'; ({ 021: 42 }); }
 |                                   ^
